name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base,
                       aeson,
                       text,
                       containers,
                       hashable,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010

executable app
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
