name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
--  ghc-options:         -Wall -Werror
  build-depends:       base,
                       aeson,
                       text,
                       containers,
                       hashable,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010

executable app
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       porter,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror


executable list
  main-is:             List.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       porter,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror
