name:                app
version:             0.1.0.0
synopsis:            TREC CAR Assessment interface
category:            Web
build-type:          Simple
license:             BSD3
cabal-version:       >=1.10

library
  hs-source-dirs:      src
--  exposed-modules:
--  ghc-options:         -Wall -Werror
  build-depends:       base,
                       aeson,
                       text,
                       containers,
                       hashable,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010

executable app
  main-is:             Main.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       split,
                       hashable,
                       containers,
                       time,
                       porter>=0.1.0.2,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
  ghc-options:         -O0 -Wall -Werror
--  buildable:           false


executable list
  main-is:             List.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       porter>=0.1.0.2,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror

executable list-l
  main-is:             ListL.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       serialise,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       porter>=0.1.0.2,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -Wno-orphans



executable tqa-new-heading
  main-is:             TqaNewHeading.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       serialise,
                       porter>=0.1.0.2,
                       miso-types,
                       tqa-import,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror

executable gold-article
  main-is:             GoldArticle.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       serialise,
                       porter>=0.1.0.2,
                       miso-types,
                       tqa-import,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror


executable minimal
  main-is:             Minimal.hs
  build-depends:       base,
                       ghcjs-base,
                       miso,
                       app,
                       jsaddle-dom,
                       text
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror


executable admin
  main-is:             Admin.hs
  build-depends:       base,
                       bytestring,
                       ghcjs-base,
                       miso,
                       aeson,
                       aeson-pretty,
                       app,
                       jsaddle-dom,
                       text,
                       hashable,
                       containers,
                       time,
                       filepath,
                       porter>=0.1.0.2,
                       miso-types,
                       trec-car-types
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror

--executable tst
--  main-is:             Test.hs
--  build-depends:       base,
--                       bytestring,
--                       ghcjs-base,
----                       miso,
--                       aeson,
--                       aeson-pretty,
--                       app,
----                       jsaddle-dom,
--                       ghcjs-dom,
--                       text,
--                       hashable,
--                       containers,
--                       time,
--                       filepath,
--                       porter,
--                       miso-types,
--                       trec-car-types
--  default-language:    Haskell2010
----  ghc-options:         -Wall -Werror
