name:                miso-postprocessing
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@smart-cactus.org
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: MisoPostprocessing.Utils
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5,
                       text,
                       simplir-io,
                       miso-types,
                       trec-car-types
  hs-source-dirs:      src
  default-language:    Haskell2010



executable merge-assessment-pages
  main-is:             MergeAssessmentPages.hs
  build-depends:       base,
                       bytestring,
                       optparse-applicative >= 0.12,
                       aeson,
                       aeson-pretty,
                       text,
                       time,
                       filepath,
                       hashable,
                       containers,
                       trec-car-types,
                       miso-types,
                       miso-postprocessing
  default-language:    Haskell2010

executable assessments-to-qrels
  main-is:             AssessmentsToQrels.hs
  build-depends:       base,
                       bytestring,
                       optparse-applicative >= 0.12,
                       aeson,
                       aeson-pretty,
                       text,
                       time,
                       filepath,
                       hashable,
                       containers,
                       simplir-io,
                       trec-car-types,
                       trec-car-tools,
                       miso-types,
                       miso-postprocessing
  default-language:    Haskell2010

executable car-y3-assessment-page-eval
  main-is:             CarY3AssessmentPageEval.hs
  build-depends:       base,
                       bytestring,
                       optparse-applicative >= 0.12,
                       aeson,
                       aeson-pretty,
                       text,
                       time,
                       filepath,
                       hashable,
                       containers,
                       simplir-io,
                       simplir-eval,
                       trec-car-types,
                       trec-car-tools,
                       miso-types,
                       miso-postprocessing
  default-language:    Haskell2010
