name:                multilang-car
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable multilang-car
  main-is:             LangExtract.hs
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
  build-depends:       base >=4.9 && <4.11,
                       aeson >=1.2 && <1.3,
                       hashable >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       serialise >=0.1 && <0.2,
                       json-stream >=0.4 && <0.5,
                       trec-car-tools
  default-language:    Haskell2010

executable multilang-car-index
  main-is:             LangIndex.hs
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
  build-depends:       base >=4.9 && <4.11,
                       aeson >=1.2 && <1.3,
                       hashable >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       serialise >=0.1 && <0.2,
                       json-stream >=0.4 && <0.5,
                       trec-car-tools
  default-language:    Haskell2010