name:                tag-me
version:             0.1.0.0
synopsis:            Interface to TagMe! entity linking service.
description:         TagMe will annotate text with entity links. Entity links are essentially hyperlinks to the described
                     entity's Wikipedia page.
                     .
                     This library provides a wrapper around the <https://sobigdata.d4science.org/group/tagme/tagme-help TagMe Rest API>
                     and decodes link offsets into segments of text and annotated text.
                     .
                     The client needs to register and obtain an application token to be passed into the library call.
                     .
                     /Example/
                     The following example from 'TagMeMain' fetches entity link annotations for "Where did Michele Obama go to school?"
                     .
                     >    env <- mkTagMeEnv
                     >    let tagMeToken = Token "..." -- obtain token from sobigdata.d4science.org
                     >        tagMeOptions = TagMeOptions { inclAbstract = False
                     >                                    , inclCategories = False
                     >                                    , isTweet = False
                     >                                    , isLongText = False
                     >                                    , language = langEn
                     >                                    }
                     >    result <- annotateWithEntityLinksConf env tagMeToken "Schumacher won the race in Indianapolis" tagMeOptions
                     .
                     The output will be as follow.
                     .
                     > [ TextPlain ""
                     > , TextEntityLink "Schumacher" (Annotation {spot = "Schumacher", start = 0, end = 10, linkProbability = 7.28895515203476e-2, rho = 0.24655279517173767, id = 20396, title = "Michael Schumacher", dbpediaCategories = Nothing, abstract = Nothing})
                     > , TextPlain " "
                     > , TextEntityLink "won" (Annotation {spot = "won", start = 11, end = 14, linkProbability = 1.6691075870767236e-3, rho = 8.345537935383618e-4, id = 300785, title = "Win\8211loss record (pitching)", dbpediaCategories = Nothing, abstract = Nothing})
                     > , TextPlain " the "
                     > , TextEntityLink "race" (Annotation {spot = "race", start = 19, end = 23, linkProbability = 1.4537563547492027e-2, rho = 0.21005864441394806, id = 1022, title = "Auto racing", dbpediaCategories = Nothing, abstract = Nothing})
                     > , TextPlain " in "
                     > , TextEntityLink "Indianapolis" (Annotation {spot = "Indianapolis", start = 27, end = 39, linkProbability = 0.30501416325569153, rho = 0.3552035689353943, id = 227965, title = "Indianapolis Motor Speedway", dbpediaCategories = Nothing, abstract = Nothing})
                     > ]
                     .
                     To see abstract and categories, enable 'TagMe.inclAbstract' and/or 'TagMe.inclCategories' in 'TagMe.TagMeOptions'.

license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
copyright:           (c) 2019 Laura Dietz and Ben Gamari
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     TagMe
  build-depends:       base >=4.11 && <4.15,
                       servant-client>=0.16,
                       servant,
                       http-api-data,
                       text >=1.2 && <1.3,
                       aeson,
                       http-client-tls,
                       http-client
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tag-me
  main-is:             TagMeMain.hs
  build-depends:       base,
                       text,
                       tag-me
  default-language:    Haskell2010
