name:                tqa-import
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://git.smart-cactus.org/ben/mediawiki-annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable tqa-import
  main-is:             Main.hs
  other-modules:       TQA
  other-extensions:    DeriveAnyClass, DerivingStrategies
  build-depends:       base,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       unordered-containers >= 0.2,
                       containers,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       trec-car-tools
  default-language:    Haskell2010

executable tqa-import2
  main-is:             MainTQA2.hs
  other-modules:       TQA
  other-extensions:    DeriveAnyClass, DerivingStrategies
  build-depends:       base,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       unordered-containers >= 0.2,
                       containers,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       trec-car-tools
  default-language:    Haskell2010

executable topic-import
  main-is:             TrecTopicImport.hs
  other-modules:       TQA
  other-extensions:    DeriveAnyClass, DerivingStrategies
  build-depends:       base,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       unordered-containers >= 0.2,
                       containers,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       trec-car-tools
  default-language:    Haskell2010
