name:                trec-car-types
version:             0.1.0.0
synopsis:            TREC CAR types
-- description:
homepage:            https://github.com/bgamari/mediawiki-annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016-2019 Ben Gamari, Laura Dietz
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     CAR.Types,
                       CAR.Types.CborList,
                       CAR.Types.Files,
                       CAR.Types.Provenance,
                       CAR.Types.AST,
                       CAR.Types.Orphans,
                       CAR.Types.AST.Pretty,
                       CAR.Utils
  other-extensions:    ScopedTypeVariables, TypeApplications, BangPatterns, DataKinds, FlexibleContexts, DeriveGeneric, TypeFamilies, OverloadedStrings, RecordWildCards, GeneralizedNewtypeDeriving, RankNTypes, StandaloneDeriving, TemplateHaskell
  build-depends:       base >=4.8 && <4.13,
                       contravariant,
                       containers,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       hashable >=1.2 && <1.3,
                       deepseq >=1.4 && <1.5,
                       binary >=0.8 && <0.9,
                       network-uri >=2.6 && <2.7,
                       base16-bytestring >=0.1 && <0.2,
                       vector >=0.12 && <0.13,
                       lens >=4.17 && <4.18,
                       aeson >= 1.0,
                       dlist,
                       text-short,
                       cborg,
                       cborg-json,
                       cryptohash-sha1,
                       mediawiki-parser >= 0.1,
                       serialise >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
