name:                trec-news
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable trec-news
  main-is:             Export.hs
  other-modules:       WapoCorpus
  other-extensions:    OverloadedStrings
  build-depends:       base,
                       deepseq >= 1.4,
                       text >=1.2 && <1.3,
                       aeson >=1.3 && <1.5,
                       unordered-containers >= 0.2,
                       Glob,
                       bytestring,
                       trec-car-types,
                       trec-car-tools,
                       simplir-trec
  default-language:    Haskell2010

executable trec-news-load
  main-is:             Load.hs
  other-modules:       WapoCorpus
  other-extensions:    OverloadedStrings
  build-depends:       base,
                       deepseq >= 1.4,
                       text >=1.2 && <1.3,
                       aeson >=1.3 && <1.5,
                       dlist,
                       containers,
                       optparse-applicative >= 0.14,
                       trec-car-types,
                       trec-car-tools,
                       simplir,
                       simplir-io,
                       simplir-trec
  default-language:    Haskell2010
