name:                wordnet-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable wordnet-export
  main-is:             SynsetExport.hs
  ghc-options:         -threaded -with-rtsopts=-A64M -rtsopts
  other-extensions:    BangPatterns, OverloadedStrings, QuasiQuotes, StandaloneDeriving, RecordWildCards, ParallelListComp, GeneralizedNewtypeDeriving
  build-depends:       base >=4.10 && <4.13,
                       deepseq >=1.4 && <1.5,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       split >=0.2 && <0.3,
                       optparse-applicative >= 0.13,
                       postgresql-simple,
                       filepath >= 1.4,
                       async,
                       pipes,
                       pipes-concurrency,
                       stm,
                       trec-car-tools,
                       ukb,
                       wordnet-parse
  default-language:    Haskell2010
